base/prod/hgir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hgir-frontend
  labels:
    app: hgir
    tier: frontend  
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: hgir
    tier: frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hgir-database
  labels:
    app: hgir
    tier: database
  namespace: prod
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: hgir
    tier: database
  type: ClusterIP
