base/prod/hgir/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hgir-ingress
  namespace: prod
  labels:
    app: hgir
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - hgir.sdpaks.equinor.com
    secretName: hgir-tls
  rules:
    - host: hgir.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hgir-frontend
              servicePort: 80
